# currencycheck

./: Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  run.sh
src/currencycheck/adapters/: currency_yfinance_adapter.py  ports.py
src/currencycheck/domain/: models.py
src/currencycheck/entrypoints/: dummy.py  streamlit_server.py
src/currencycheck/services/: currency_service.py  models.py
src/tests/integration/fixtures/: yfinance_eur.yaml
tests/: factories.py  fakes.py  test_setup.py
tests/domain/: test_models.py
tests/integration/: test_currency_yfinance_adapter.py
tests/service/: test_currency_service.py
